freaky site fix text align

--- a/tasks/task5/task5.css
+++ b/tasks/task5/task5.css
@@ -1,3 +1,9 @@
+p{
+    text-align: left;
+}
+
+
+
 .drag-area{
     position: relative;
     height: 585px;
